flux/backend/podinfo/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo
spec:
  hosts:
    - "*"
  gateways:
    - istio-ingressgateway/catchall
  http:
    - name: podinfo-backend
      match:
        - uri:
            prefix: /
          sourceLabels:
            topology.istio.io/cluster: kind-backend
      route:
        - destination:
            host: podinfo
            port:
              number: 9898
            subset: kind-backend
